sys/msdk/gstmsdkcontext.c
@@ -94,7 +94,8 @@ get_device_id (void)
       dev = (GUdevDevice *) l->data;
 
       parent = g_udev_device_get_parent (dev);
-      if (strcmp (g_udev_device_get_subsystem (parent), "pci") != 0) {
+      if (strcmp (g_udev_device_get_subsystem (parent), "pci") != 0 ||
+          strcmp (g_udev_device_get_driver (parent), "i915") != 0) {
         g_object_unref (parent);
         continue;
       }
